corregimos la barra de navegacion para eliminar ocio de la barra de deportes. modificamos meta del index.html para hacerlo legible para otros navegadores

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <HTML>
 <head>
 <title>inicio</title>
-<meta http-equiv=”Content-Type” content=”text/html; charset=UTF-8″ />
+<meta content="text/html; charset=UTF-8" http-equiv="content-type"><meta http-equiv=”Content-Type” content=”text/html; charset=UTF-8″ />
 <link rel="stylesheet" type="text/css" href="estilos/estilos.css">
 </head>
 <body>
