--- a/deportes.html
+++ b/deportes.html
@@ -30,7 +30,7 @@ article h2{
 	<li><a href="leer.html">Leer</a></li>	-->
 	<li><a href="economia.html">Economia</a></li>
 	<li><a href="administracion.html">Administracion</a></li>
-	<li><a href="ocio.html">Ocio</a></li>
+<!--	<li><a href="ocio.html">Ocio</a></li> -->
 	<li><a href="nino.html">Ninos</a></li>
 	<li><a href="retos.html">50 retos</a></li>
 <!--	<li><a href="seutil.html">Se util</a></li>	-->
