añadimos el archivo remedioscaseros.html y ajustamos el archivo index.html para que pueda apuntar hacia él

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<li><a href="nino.html">Ninos</a></li>
 	<li><a href="retos.html">50 retos</a></li>
 <!--	<li><a href="seutil.html">Se util</a></li>	-->
+	<li><a href="remedioscaseros.html">Remedios Caseros</a></li>
 	</ul>
 </nav>
 <article>
